--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -61,6 +61,7 @@ input::-o-outer-spin-button {
 #nb1,
 #nb2,
 #operator {
+    background-color: #bacfc0;
     width: 6rem;
     height: 10rem;
     font-size: 1.5rem;
@@ -78,13 +79,21 @@ input::-o-outer-spin-button {
 }
 
 #overview {
+    background-color: #bacfc0;
+    width: 20rem;
+    height: 3rem;
+    font-size: 1rem;
+}
+
+#result {
+    background-color: #bacfc0;
     width: 20rem;
     height: 3rem;
     font-size: 1rem;
 }
 
 .borderWindow {
-    background-color: #ffffff;
+    background-color: #bacfc0;
     margin-right: 1.5rem;
     margin-left: 1.5rem;
     border: 1px solid #95b19e;
